# Practice

./: .gitignore
C++/BasicThread/: BasicThread.sln
C++/Cmake-VS-test/: CMakeLists.txt
C++/Cmake-VS-test/Cmake-VS-test/: CMakeLists.txt  Cmake-VS-test.cpp  Cmake-VS-test.h
C++/Fast-sqrt/: Fast-sqrt.sln
C++/Regular_Expressions/: Regular_Expressions.sln
C++/Sine-Approximation/: Sine-Approximation.sln
C++/Thread_and_Vector/: Thread_and_Vector.sln
C++/Vector_Of_Vectors/: Vector_Of_Vectors.sln
C++/constexpr-array-initialization/: constexpr-array-initialization.sln
C++/intrinsic_functions/: intrinsic_functions.sln  intrinsic_functions.vcxproj  main - disassembly.cpp  main.cpp
C++/mandelbrot/: main.cpp  mandelbrot.sln  mandelbrot.vcxproj
C++/vector_of_bitsets/: vector_of_bitsets.sln
C/Disaster/: bad.c
Catch2/catchtest/: catchtest.sln
Control_Theory/: pyproject.toml  readme.md
Control_Theory/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Eigen/Linear-Algebra-Test/: Linear-Algebra-Test.sln
Eigen/Simple_Eigen/: Simple_Eigen.sln
Fibanacci/Fibanacci_cmd/: Fibanacci_cmd.sln
Javascript/Banas/: jstut.html  jstut.js
Julia/: text.txt  tutorial-1.jl  tutorial-2.jl  tutorial-3.jl  tutorial-4.jl
Python/AsyncIO/: testwait.py
Python/Emit/: e.py
Python/Python Subprocess/: driver.py  reverse.py
Python/TCP/: client.py  client_multi.py  server.py  server_multi.py
SFML/Instructions_Test/: Instructions_Test.sln
SFML/Youtube_Setup_Tutorial/: Youtube_Setup_Tutorial.sln
TensorFlow/TF_Intro_Example/: TF_Intro_Example.sln
opencv/videocapture/: cv.py
(+158 files in other folders)
