[tool.poetry]
name = "control_theory"
version = "0.1.0"
description = "Notebooks I used to explore concepts from control theory classes"
authors = ["Matt Mart <matthew.marti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
notebook = "^7.2.2"
scipy = "^1.14.1"
control = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
