# CMakeList.txt : CMake project for Cmake-VS-test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Cmake-VS-test "Cmake-VS-test.cpp" "Cmake-VS-test.h")

# TODO: Add tests and install targets if needed.
